<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlayUnoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="2"
            android:text="@string/opponentDeck"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topCardOnPile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/topCardOnPile"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <au.edu.federation.unogame.SquareTextView
                    android:id="@+id/currentCardOnPile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/currentCardOnPile"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/totalCardOnDeck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="3"
                android:text="@string/totalCardsOnDeck"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/pickCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="90dp"
            android:text="@string/pickUpCard" />

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/playerDeck"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />

        <GridView
            android:id="@+id/playerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="4"
            android:scrollbars="horizontal"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp">

        </GridView>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>